# DAS2B

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: azure-functions-app-python.yml  deploy-dev.yml  deploy-staging-prod.yml  pr-validate.yml
docs/: ci-cd-guide.md
docs/adr/: ADR_001.md  ADR_002.md
src/: function_app.py  health_check.py  requirements-dev.txt  test_observer_lifecycle.py  test_observer_registry.py  test_triggers.py
src/base/: __init__.py  observer_registry.py  trigger_observer.py
src/base/observers/: __init__.py  error_observer.py  logging_observer.py  metrics_observer.py
src/triggers/: extract_categoria_produto.py  extract_cliente.py  extract_entrega.py  extract_estoque_movimentacao.py  extract_estoque_saldo.py  extract_fornecedor.py  extract_pedido.py  extract_pedido_item.py  extract_produto.py  extract_regiao.py  extract_representante.py  extract_titulo_receber.py  extract_transportadora.py
tests/: test_example.py  test_health_check.py
