[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "W"]
ignore = ["F841"]  # Ignore unused variables initially

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
python_files = ["test_*.py", "*_test.py"]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "das2b-vendamais"
version = "0.1.0"
description = "VendaMais Distribuidora - Plataforma de Inteligência Operacional"
requires-python = ">=3.13"
